--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "google-auth-library": "^9.15.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
