--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
+    "username": "imajiwai_visual",
+    "password": "visualab01",
     "database": "backend_lab",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "",
+    "username": "imajiwai_visual",
+    "password": "visualab01",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "",
+    "username": "imajiwai_visual",
+    "password": "visualab01",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
