--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "imajiwai_visual",
     "password": "visualab01",
-    "database": "backend_lab",
+    "database": "imajiwai_visual",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "imajiwai_visual",
     "password": "visualab01",
-    "database": "database_test",
+    "database": "imajiwai_visual_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "imajiwai_visual",
     "password": "visualab01",
-    "database": "database_production",
+    "database": "imajiwai_visual_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
