--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
-    "username": "imajiwai_visual",
-    "password": "visualab01",
-    "database": "imajiwai_visual",
+    "username": "root",
+    "password": null,
+    "database": "backend_lab",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "imajiwai_visual",
-    "password": "visualab01",
-    "database": "imajiwai_visual_test",
+    "username": "root",
+    "password": "",
+    "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "imajiwai_visual",
-    "password": "visualab01",
-    "database": "imajiwai_visual_production",
+    "username": "root",
+    "password": "",
+    "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
