--- a/config/config.json
+++ b/config/config.json
@@ -14,9 +14,9 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "",
-    "database": "database_production",
+    "username": "imajiwai_visual",
+    "password": "visualab01",
+    "database": "imajiwai_visual",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
